Strecke Hinzufuegen und Verbrauch aktualisieren

--- a/app/src/main/res/layout/activity_new_car.xml
+++ b/app/src/main/res/layout/activity_new_car.xml
@@ -6,9 +6,11 @@
     android:layout_height="match_parent">
 
     <include
-        layout="@layout/app_bar_new_car"
         android:id="@+id/app_bar_new_car"
+        layout="@layout/app_bar_new_car"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="-97dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
