Tankvorgang xml's und Klasse sowie strings hinzugefügt/bearbeitet

--- a/app/src/main/res/layout/fragment_new_tankvorgang.xml
+++ b/app/src/main/res/layout/fragment_new_tankvorgang.xml
@@ -79,17 +79,19 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/bild_des_tankbelegs" />
 
+            <ImageView
+                android:id="@+id/imageViewTankvorgangThumbnail"
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                tools:srcCompat="@tools:sample/backgrounds/scenic"
+                android:visibility="gone"/> <!-- TODO IMG File source -->
+
+
             <Button
                 android:id="@+id/buttonTankvorgangBildAufnehmen"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:text="@string/tankvorgang_bild_aufnehmen" />
-
-            <ImageView
-                android:id="@+id/imageViewTankvorgangThumbnail"
-                android:layout_width="200dp"
-                android:layout_height="150dp"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" /> <!-- TODO IMG File source, Position? -->
 
         </LinearLayout>
 
