--- a/app/src/main/res/layout/fragment_new_car.xml
+++ b/app/src/main/res/layout/fragment_new_car.xml
@@ -208,7 +208,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
                 android:inputType="numberDecimal"
-                android:text="@string/zero_number" />
+                android:text="@string/default_tankvolumen" />
 
             <!-- Aktueller Tankstand -->
 
